vanguard_k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vanguardyouth-shared-gateway
  namespace: istio-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "vanguardyouth.store"
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "vanguardyouth.store"
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "vanguardyouth.store"
      tls:
        mode: SIMPLE
        credentialName: vanguardyouth-tls-cert
