vanguard_k8s/backend.yaml
# ==========================================================
# 3. BACKEND CANARY ROLLOUT
# ==========================================================
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: dev
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        devopsteam: ironcore-devops
      annotations:
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
        # 🌟 BYPASS ISTIO SIDECAR FOR DIRECT RDS COMMUNICATION:
        traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
    spec:
      containers:
        - name: backend-ui
          image: "devopsflow999/crud-backend:v1.0.17" # Update image repository and tag as needed
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
  strategy:
    canary:
      stableService: backend-stable
      canaryService: backend-canary
      trafficRouting:
        istio:
          virtualService:
            name: backend-vservice
            routes:
              - backend-route
      steps:
        - setWeight: 20
        - pause: { duration: 3m }
        - analysis:
            templates:
              - templateName: backend-success-rate
        - setWeight: 50
        - pause: { duration: 2m }

---
# ==========================================================
# 4. KUBERNETES SERVICES (CANARY & STABLE)
# ==========================================================
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: dev
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: backend-stable
  namespace: dev
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: backend

---
# ==========================================================
# 5. ISTIO VIRTUAL SERVICE
# ==========================================================
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vservice
  namespace: dev
spec:
  hosts:
    - "vanguardyouth.store"
    - "backend-stable"
    - "backend-canary"
  gateways:
    - istio-ingress/vanguardyouth-shared-gateway
    - mesh
  http:
    - name: backend-route
      match:
        - uri:
            prefix: /api/items
      rewrite:
        uri: /items
      route:
        - destination:
            host: backend-stable
            port:
              number: 3000
          weight: 100
        - destination:
            host: backend-canary
            port:
              number: 3000
          weight: 0
