vanguard_k8s/frontend.yaml
# ==========================================================
# 2. FRONTEND CANARY ROLLOUT
# ==========================================================
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        devopsteam: ironcore-devops
      annotations:
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
    spec:
      containers:
        - name: frontend-ui
          image: "devopsflow999/crud-frontend:v1.0.10"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
  strategy:
    canary:
      stableService: frontend-stable
      canaryService: frontend-canary
      trafficRouting:
        istio:
          virtualService:
            name: frontend-vservice
            routes:
              - frontend-route
      steps:
        - setWeight: 20
        - pause: { duration: 1m }
        - analysis:
            templates:
              - templateName: frontend-success-rate
        - setWeight: 50
        - pause: { duration: 2m }

---
# ==========================================================
# 3. KUBERNETES SERVICES (CANARY & STABLE)
# ==========================================================
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend

---
# ==========================================================
# 4. ISTIO VIRTUAL SERVICE
# ==========================================================
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vservice
  namespace: dev
spec:
  hosts:
    - "vanguardyouth.store"
    - "frontend-stable"
    - "frontend-canary"
  gateways:
    - istio-ingress/vanguardyouth-shared-gateway
    - mesh
  http:
    - name: frontend-route
      route:
        - destination:
            host: frontend-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: frontend-canary
            port:
              number: 80
          weight: 0
